Bug 410707 - A gap between a panel and a maximized window appears on an application startup
Summary: A gap between a panel and a maximized window appears on an application startup
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Plasma
Component: application (show other bugs)
Version: 0.9.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-07 20:39 UTC by Mikhail Zolotukhin
Modified: 2019-08-08 06:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments
The gap between the panel and the maximized window (9.72 KB, image/png)
2019-08-07 20:39 UTC, Mikhail Zolotukhin
Details
A minimal layout, on which the issue is reproduced (2.87 KB, text/plain)
2019-08-08 04:41 UTC, Mikhail Zolotukhin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mikhail Zolotukhin 2019-08-07 20:39:38 UTC
Created attachment 122000 [details]
The gap between the panel and the maximized window

SUMMARY
Creating a panel that is less than 24px and has disabled thickness margins results in gaps appearing on Latte startup.

STEPS TO REPRODUCE
1. Create Latte Panel
2. Make its height less than 24px
3. Disable thickness margins
4. Restart Latte 
5. Maximize window

OBSERVED RESULT
There is a gap between the panel and the maximized window, as if the panel occupies that empty space.

EXPECTED RESULT
There is no gap between the panel and the maximized window, the panel has the height that was set in the settings.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.16.4
KDE Frameworks Version: 5.60.0
Qt Version: 5.13.0

ADDITIONAL INFORMATION
The gap disappears after opening panel settings and then closing them.
Comment 1 Michail Vourlakos 2019-08-07 21:36:01 UTC
Your plasma theme is faulty. Change to another plasma theme.
Comment 2 Mikhail Zolotukhin 2019-08-07 22:53:41 UTC
(In reply to Michail Vourlakos from comment #1)
> Your plasma theme is faulty. Change to another plasma theme.

My Workspace theme is default Breeze shipped with Plasma. I haven't made any modifications to it. I tried Arc Dark theme too, but a gap appears anyway.
Comment 3 Michail Vourlakos 2019-08-07 23:16:35 UTC
Send your layout file, the one you observe the issue
Comment 4 Mikhail Zolotukhin 2019-08-08 04:41:04 UTC
Created attachment 122003 [details]
A minimal layout, on which the issue is reproduced

I took everything from the panel and the dock, so they are both empty. However if I remove the dock at the bottom completely, there is no gap between the panel and a window. If I add a new standard Dock to the bottom of a screen and restart Latte - the gap is starting to appear again.
Comment 5 Michail Vourlakos 2019-08-08 06:49:08 UTC
Git commit bf66aa35a75d65c04f527db41dea2d92d57f18b3 by Michail Vourlakos.
Committed on 08/08/2019 at 06:46.
Pushed by mvourlakos into branch 'v0.9'.

update struts when normalThickness value changes

--the issue was pretty obvious when the user was
using a top view with thickness < 24px. and a
bottom view always visible. In that case the top
view struts on startup did not decrease below
at 24px.

M  +5    -2    app/view/visibilitymanager.cpp

https://commits.kde.org/latte-dock/bf66aa35a75d65c04f527db41dea2d92d57f18b3
Comment 6 Michail Vourlakos 2019-08-08 06:51:25 UTC
Git commit f7d968ff6d9651b0112cf75e3e169c249fd4b4ea by Michail Vourlakos.
Committed on 08/08/2019 at 06:51.
Pushed by mvourlakos into branch 'master'.

update struts when normalThickness value changes

--the issue was pretty obvious when the user was
using a top view with thickness < 24px. and a
bottom view always visible. In that case the top
view struts on startup did not decrease below
at 24px.

M  +5    -2    app/view/visibilitymanager.cpp

https://commits.kde.org/latte-dock/f7d968ff6d9651b0112cf75e3e169c249fd4b4ea